--- a/complaint-form.html
+++ b/complaint-form.html
@@ -17,26 +17,26 @@
                         <div class="form-row form-group">
                         <div class="col">
                             <!-- <label for="inputname">Name</label> -->
-                            <input type="text" class="form-control" placeholder="First name">
+                            <input type="text" class="form-control" required placeholder="First name">
                         </div>
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Last name">
+                            <input type="text" class="form-control" required placeholder="Last name">
                         </div>
                         </div>
                         <div class="form-group">
                                 <!-- <label for="inputemail">Email</label> -->
-                                <input type="text" class="form-control" id="inputemail" placeholder="Enter your email here">
+                                <input type="text"  class="form-control" id="inputemail" required placeholder="Enter your email here">
                               </div>
                               <div class="form-group">
                                 <!-- <label for="inputphone">Phone</label> -->
-                                <input type="text" class="form-control" id="inputphone" placeholder="Enter your phone number here">
+                                <input type="text"  class="form-control" id="inputphone" required placeholder="Enter your phone number here">
                               </div>
                         <div class="form-group">
                                     <label for="message">Enter Complaint Here</label>
-                            <textarea class="form-control" id="message" rows="3"></textarea>
+                            <textarea class="form-control" id="message" required rows="3"></textarea>
                         </div>
                         <button type="button" class="btn btn-danger btn-lg">Submit</button>
-                    </form>
+                </form>
     
     
 
