Created intern dashboard

--- a/signup.html
+++ b/signup.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <form action="" class="form">
         <h1>Sign Up</h1>
@@ -14,7 +16,7 @@
         <label for="firstname" class="two-col">
             <input type="text" placeholder="First Name">
         </label>
-        <label for="lastname"  class="two-col">
+        <label for="lastname" class="two-col">
             <input type="text" placeholder="Last Name">
         </label>
         <label for="email">
@@ -26,14 +28,15 @@
         <label for="username">
             <input type="tel" placeholder="Username">
         </label>
-        <label for="password"  class="two-col">
+        <label for="password" class="two-col">
             <input type="password" placeholder="Password">
         </label>
         </label>
-        <label for="c-password"  class="two-col">
+        <label for="c-password" class="two-col">
             <input type="password" placeholder="Confirm Password">
         </label>
         <input class="submit-form" type="submit" value="Sign Up">
     </form>
 </body>
+
 </html>
