--- a/complaint-form.html
+++ b/complaint-form.html
@@ -35,7 +35,7 @@
                                     <label for="message">Enter Complaint Here</label>
                             <textarea class="form-control" id="message" required rows="3"></textarea>
                         </div>
-                        <button type="button" class="btn btn-danger btn-lg">Submit</button>
+                        <button type="submit" class="btn btn-danger btn-lg">Submit</button>
                 </form>
     
     
