--- a/dashboard.html
+++ b/dashboard.html
@@ -71,7 +71,11 @@
                         <a class="nav-link" href="#"><img src="images/brand-logo.png" class="logo" alt="HNG logo"></a>
                     </li>
                     <li class="nav-item ml-auto">
-                        <button class="nav-link btn-sm btn-sky text-uppercase py-1" href="#"><small class=" font-weight-bold">Submit</small></button>
+                        <button class="nav-link btn-sm btn-sky text-uppercase py-1" href="#">
+                            <small class=" font-weight-bold">
+                                Logout
+                            </small>
+                        </button>
                     </li>
                 </ul>
             </div>
@@ -112,99 +116,82 @@
 
             <!--Dashboard-->
 
-            <div class="col-12 col-md-10 row py-3 dashboard aaa">
+            <div class="col-12 col-md-10 row py-3 dashboard">
                 <div class="col-12 col-md-9">
                     <div class="row d-flex pb-2 justify-content-center">
 
                         <!--Topbar Section-->
 
-                        <div class="col-3 p-1 p-md-3">
+                        <div class="col-4 p-1 p-md-3">
                             <div class="topbar text-center py-3 py-md-4 border">
                                 <span class="fa fa-signal fa-2x"></span>
                                 <p class="text-center mb-0">3</p>
                                 <small>Stage</small>
                             </div>
                         </div>
-                        <div class="col-3 p-1 p-md-3">
+                        <div class="col-4 p-1 p-md-3">
                             <div class="topbar text-center py-3 py-md-4 border bg-primary text-white">
                                 <span class="fa fa-briefcase fa-2x"></span>
                                 <p class="text-center mb-0">1</p>
                                 <small>Completed tasks</small>
                             </div>
                         </div>
-                        <div class="col-3 p-1 p-md-3">
-                            <div class="topbar text-center py-3 py-md-4 border">
-                                <span class="fa fa-bell fa-2x"></span>
-                                <p class="text-center mb-0">2</p>
-                                <small>Notifications</small>
-                            </div>
-                        </div>
-                        <div class="col-3 p-1 p-md-3">
+
+                        <div class="col-4 p-1 p-md-3">
                             <div class="topbar text-center py-3 py-md-4 border">
                                 <span class="fa fa-exclamation-circle fa-2x"></span>
                                 <p class="text-center mb-0">4</p>
                                 <small>Reports</small>
                             </div>
                         </div>
+                        <div class="col-12 p-1 p-md-3">
+                            <div class="bg-white border-radius p-3 p-md-4 border">
+                                <h4 class="font-weight-bold">Welcome Intern,</h4>
+                                <h6 class="font-weight-bold mb-3">Submit your task</h6>
+                                <p>Enter your commit/app URL</p>
+                                <input type="text" class="form--control px-4" />
+                                <button class="nav-link btn-sm btn-sky text-uppercase py-1 mt-3" href="#">
+                                    <small class=" font-weight-bold">
+                                        Submit
+                                    </small>
+                                </button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="px-2 px-md-3 h-100">
+                    <div class="px-2 px-md-3">
 
                         <!--Task Section-->
 
                         <div class="row bg-white border-radius border p-2">
-                            <h6 class="text-uppercase font-weight-bold">Task</h6><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3">
-                    <div class="row pt-3 p-2">
-
-                        <!--Notifications Section-->
-
-                        <div class="col border border-radius bg-white p-2">
-                            <h6 class="text-uppercase font-weight-bold">Notifications</h6><br><br><br><br><br><br><br><br>
-                        </div>
-                    </div>
-                    <div class="row pt-3 p-2">
-
-                        <!--Mentors Section-->
-
-                        <div class="col border border-radius bg-white p-2">
-                            <h6 class="text-uppercase font-weight-bold">Mentors</h6>
+                            <h6 class="text-uppercase font-weight-bold">Task</h6>
                             <table class="table">
                                 <tbody>
                                     <tr class="d-flex align-items-center border-bottom">
-                                        <td class="border-top-0"><span class="fa fa-user fa-2x"></span></td>
-                                        <td class="border-top-0 w-100">
-                                            <small class="font-weight-bold text-uppercase">tomisin lalude</small><br>
-                                            <small>Ghana</small>
-                                        </td>
-                                        <td class="border-top-0"><span class="fa fa-ellipsis-v"></span></td>
+                                        <td class="border-top-0">1</td>
+                                        <td class="border-top-0 w-100">https://www.my-commit-url.com</td>
+                                        <td class="border-top-0"><span class="fa fa-user"></span></td>
                                     </tr>
                                     <tr class="d-flex align-items-center border-bottom">
-                                        <td class="border-top-0"><span class="fa fa-user fa-2x"></span></td>
-                                        <td class="border-top-0 w-100">
-                                            <small class="font-weight-bold text-uppercase">professor</small><br>
-                                            <small>Congo</small>
-                                        </td>
-                                        <td class="border-top-0"><span class="fa fa-ellipsis-v"></span></td>
+                                        <td class="border-top-0">2</td>
+                                        <td class="border-top-0 w-100">https://www.my-commit-url.com</td>
+                                        <td class="border-top-0"><span class="fa fa-user"></span></td>
                                     </tr>
                                     <tr class="d-flex align-items-center border-bottom">
-                                        <td class="border-top-0"><span class="fa fa-user fa-2x"></span></td>
-                                        <td class="border-top-0 w-100">
-                                            <small class="font-weight-bold text-uppercase">xyluz</small><br>
-                                            <small>Missisippi</small>
-                                        </td>
-                                        <td class="border-top-0"><span class="fa fa-ellipsis-v"></span></td>
+                                        <td class="border-top-0">3</td>
+                                        <td class="border-top-0 w-100">https://www.my-commit-url.com</td>
+                                        <td class="border-top-0"><span class="fa fa-user"></span></td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-md-3">
+
+                </div>
                 <div class="col-6 col-md-4 pl-2 pt-3 mt-md-2 p-md-2">
 
-                    <!--Team members Section-->
+                    <!--Team members Section
 
                     <div class="border border-radius bg-white p-2">
                         <h6 class="text-uppercase font-weight-bold">Team members</h6>
@@ -237,15 +224,10 @@
                             </tbody>
                         </table>
 
-                    </div>
+                    </div>-->
                 </div>
                 <div class="col-6 col-md-8 p-1 pt-3 mt-md-2 p-md-2">
 
-                    <!--progress Section-->
-
-                    <div class="border border-radius bg-white p-2">
-                        <h6 class="text-uppercase font-weight-bold">progress</h6><br><br><br><br><br><br><br><br>
-                    </div>
                 </div>
             </div>
         </div>
