Updated the intern dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -169,17 +169,17 @@
                                     <tr class="d-flex align-items-center border-bottom">
                                         <td class="border-top-0">1</td>
                                         <td class="border-top-0 w-100">https://www.my-commit-url.com</td>
-                                        <td class="border-top-0"><span class="fa fa-user"></span></td>
+                                        <td class="border-top-0"><span class="fa fa-check text-success"></span></td>
                                     </tr>
                                     <tr class="d-flex align-items-center border-bottom">
                                         <td class="border-top-0">2</td>
                                         <td class="border-top-0 w-100">https://www.my-commit-url.com</td>
-                                        <td class="border-top-0"><span class="fa fa-user"></span></td>
+                                        <td class="border-top-0"><span class="fa fa-check text-danger"></span></td>
                                     </tr>
                                     <tr class="d-flex align-items-center border-bottom">
                                         <td class="border-top-0">3</td>
                                         <td class="border-top-0 w-100">https://www.my-commit-url.com</td>
-                                        <td class="border-top-0"><span class="fa fa-user"></span></td>
+                                        <td class="border-top-0"><span class="fa fa-check text-danger"></span></td>
                                     </tr>
                                 </tbody>
                             </table>
