Updated the intern dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,8 +18,11 @@
 
     <div class="sidebar">
         <nav class="navbar navbar-expand-md navbar-light bg-white py-2 py-md-0 border">
-            <a class="navbar-brand" href="index.html">
-                <img src="images/brand-logo.png" class="logo" alt="HNG logo">
+            <a class="nav-link" href="#">
+                <img src="images/logo.png" class="logo" alt="HNG logo">
+                <small class="font-weight-bold">
+                    HNG NANAGER
+                </small>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fa fa-bars"></span>
@@ -68,7 +71,12 @@
             <div class="col nav-bar">
                 <ul class="nav d-flex align-items-center px-5 py-2">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><img src="images/brand-logo.png" class="logo" alt="HNG logo"></a>
+                        <a class="nav-link" href="#">
+                            <img src="images/logo.png" class="logo" alt="HNG logo">
+                            <small class="font-weight-bold">
+                                HNG NANAGER
+                            </small>
+                        </a>
                     </li>
                     <li class="nav-item ml-auto">
                         <button class="nav-link btn-sm btn-sky text-uppercase py-1" href="#">
