--- a/about.html
+++ b/about.html
@@ -17,13 +17,16 @@
             </a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Home Page</a>
+                  <a class="nav-link active" href="index.html">Home Page</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Projects</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="faq.html">FAQs</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#" tabindex="-1" >Contact Us</a>
